--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,11 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Central de Pedidos</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v3">docs</a> will show you the way.
+    <a href="https://www.linkedin.com/in/william-carvalho-coelho/">linkdin</a>
   </p>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <button ion-button secondary menu>Menu</button>
 </ion-content>
