feat: tela inicial

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,19 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content>
+  <h3>Sistema de Pedidos</h3>
 
-<ion-content padding>
-  <h3>Central de Pedidos</h3>
+  <img src="assets/imgs/tela-de-inicio.png" alt="logo">
 
-  <p>
-    <a href="https://www.linkedin.com/in/william-carvalho-coelho/">linkdin</a>
-  </p>
+  <form>
+  <ion-item>
+    <ion-label stacked>Email</ion-label>
+    <ion-input>type="text</ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label stacked>Senha</ion-label>
+    <ion-input type="password"></ion-input>
+  </ion-item>
+  <button ion-button block>Entrar</button>
+</form>
+<button ion-button block outline>Registrar</button>
 
-  <button ion-button secondary menu>Menu</button>
 </ion-content>
