--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,6 +1,7 @@
 <ion-header>
-  <button ion-button menuToggle></button>
+  <button ion-button menuToggle>
   <ion-icon name="menu"></ion-icon>
+</button>
   <ion-navbar>
     <ion-title>Categorias</ion-title>
   </ion-navbar>
