--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -8,6 +8,10 @@
 </ion-header>
 
 <ion-content padding>
-  {{email}}
 
+  <ion-avatar>
+    <img class="circle" [src]="cliente?.imagemUrl || 'assets/imgs/avatar-blank.png'">
+  </ion-avatar>
+  <h2 text-center>{{cliente?.name}}</h2>
+  <p text-center>{{cliente?.email}}</p>
 </ion-content>
