--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,20 +1,23 @@
+
 <ion-header>
-  <button ion-button menuToggle>
-  <ion-icon name="menu"></ion-icon>
-</button>
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Categorias</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+  <ion-fab top right edge>
+    <button navPush="CartPage" ion-fab mini><ion-icon name="cart"></ion-icon></button>
+  </ion-fab>
   <ion-list>
-  <button ion-item *ngFor="let item of items">
-    <ion-thumbnail item-start>
-      <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
-    </ion-thumbnail>
-    <h2>{{ item.name }}</h2>
-  </button>
-</ion-list>
-
+    <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
+      <ion-thumbnail item-start>
+        <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+      </ion-thumbnail>
+      <h2> {{ item.name }} </h2>
+    </button>
+  </ion-list>
 </ion-content>
